<resources>
    <string name="app_name">My Application</string>
    <string name="back">Back</string>
    <string name="esta_uma_atividade_normal">Esta é uma atividade normal</string>
    <string name="Back" />
    <string name="Marca" />
    <string name="Modelo" />
    <string name="eletronicos">Eletronicos</string>
    <string name="ano">Ano</string>
    <string name="novo_computador">Novo computador</string>
    <string name="novo_celular">Novo celular</string>
    <string name="clique">Clique</string>
    <string name="name">Name</string>
    <string name="doguinho">Doguinho</string>
    <string name="Name">Name</string>
    <string name="Doguinho">Doguinho</string>
    <string name="Clique">Clique</string>
    <string name="exercicios">Exercicios</string>
    <string name="investimentos">Investimentos</string>
    <string name="plataforma">Plataforma</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="atividade_1">Atividade 1</string>
    <string name="veiculos">Veiculos</string>
    <string name="contatos">Contatos</string>
    <string name="Eletronicos" />
    <string name="teste">Teste</string>
    <string name="calculadora">Calculadora</string>
    <string name="financas">Financas</string>
</resources>